--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8088
   servlet:
-    context-path: /authService
+    context-path: /SteamCatAuthority
   tomcat:
     uri-encoding: UTF-8
 spring:
@@ -33,18 +33,20 @@ spring:
         min-idle: 50
         max-active: 2000
         max-wait: 1000
+  jmx:
+    enabled: false
 
 mybatis:
   mapper-locations: classpath:mappers/*.xml
 
-eureka:
-  instance:
-    # 注册服务使用ip
-    prefer-ip-address: true
-  ###客户端调用地址
-  client:
-    serviceUrl:
-      defaultZone: http://steamcat:Steamcat123@localhost:8100/eureka
+#eureka:
+#  instance:
+#    # 注册服务使用ip
+#    prefer-ip-address: true
+#  ###客户端调用地址
+#  client:
+#    serviceUrl:
+#      defaultZone: http://steamcat:Steamcat123@localhost:8100/eureka
 
 steamCatAuthority:
   signKey: steamCat20200808
@@ -52,4 +54,5 @@ steamCatAuthority:
 auth:
   clientId: SteamCat
   clientSecret: se%Smov*da56g48
-  domain: 127.0.0.1
+  domain: 81.70.31.60
+  loginUrl: http://127.0.0.1:8080/SteamCatAuthority/oauth/token
